--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    /> -->
+    <meta
+      name="keywords"
+      content="user, social, share, profile, pictures, images, grid layout, avatar, like button"
+    />
+    <meta name="author" content="Fred Lai" />
+    <meta
+      name="description"
+      content="User creates profile, featuring a name, description and pictures"
+    />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Spots</title>
   </head>
